--- a/style.css
+++ b/style.css
@@ -1,144 +1,126 @@
 *{
     margin: 0;
     padding: 0;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-}
-.list-item,h1, .button-email, .button-join{
-    font-family: 'Orbitron';
-}
-.container{
-    padding: 2em 1em 0em 5em;
-}
-/* <------------Nav-Bar Section ------------->*/
-.navbar-container{
-    display: flex;
-    align-items:baseline;
-    justify-content: space-between;
-    padding-right: 6em;
-}
-/* <------------Nav-Bar LOGO ------------->*/
-.navbar-container img{
-    height: 38px;
-}
-/* <------------Nav-Bar Menu ------------->*/
-.list{
-    display: flex;
-    list-style: none ;
-}
-.list-item{
-    padding: 0em 1em;
-    font-size: 20px;
-}
-.list-item:hover::after{
-    content: '';
-    border-bottom: 3px solid black;
-    display: block;
-    margin-left: 20%;
-    width: 70%;
-}
-.list-item:hover{
-    transition: all 0.2s;
-    font-weight: 600;
-    font-size: 1.3em;
-}
-/* <------------Nav-Bar Search area ------------->*/
-.button-group{
-    display:flex;
-    align-items: baseline;
-}
-.search-icon{
-    display:flex;
-    align-items: baseline;
-    padding-right: 6px;
-}
-.search-icon svg{ 
-    height: 26px;
-    position: relative;
-    top:8px;
-}
-button{
-    padding: 0em 1.5em;
-    border: 2px solid black;
-    border-radius: 7px;
-    background: transparent;
-    font-size: 18px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    color: #6c6b6b;
-}
-.nav-button{
-    height: 1.7em;
-    padding: 0em 2em;
-
-}
-/* <------------Banner Area ------------->*/
-
-.hero-container{
-    display: flex;
-    padding-top: 5em;
-    justify-content: space-between;
+    box-sizing: border-box;
 }
 
-.square{
-    position: absolute;
-    z-index: -1;
-    top: 30.5em;
-    left: 19em;
-    height:1em;
+body {
+    height: 100vh;
 }
-.star{
-    z-index: -1;
-    position: absolute;
-    top: 10em;
-    left: 106em;
-}
-.star img{
-    height: 3em;
-}
-.globe{
-    z-index: -1;
-    position: absolute;
-    top: 8em;
-    left: 63em;
-}
-.globe img{
-    height: 4em;
-}
-/* <------------------Details-Right----------------->  */
 
-.hero-container-right{
+
+header {
+  width: 100%;
+}
+.nav {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.nav .content{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding-left: 5em;
+    justify-content: space-around;
+    width: 100%;
 }
-.hero-heading{
-    font-size: 4.5em;
+
+.nav .content .nav-center {
+    display: flex;
+    justify-content: space-between;
+    width: 30%;
+    font-size: 2rem;
 }
-.hero-description{
-    padding: 3em 11em;
-    font-size: 1.1em;
-    color: rgb(103, 103, 103);
-    text-align: center;
+
+a{
+    text-decoration: none;
 }
-.button-join{
-    background-color: black;
-    color: white;
-    padding: 0em 0.1em;
-    margin-left: 0.8em;
+
+.nav .content .right-search {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
-/* <-----------------Right Content's Footer--------------> */
-.contact-heading{
-    margin-top: 6em;
-    font-size: 1.2em;
-    color: #595959;
-    text-align: center;
-    margin-bottom: 0.7em;
-    font-weight: lighter;
+
+.right-search img {
+  transform: scale(1.5);
 }
-.icons span{
-    margin:0em 0.5em;
+.right-search input {
+  font-size: 2rem;
 }
-.icons img{
-    height: 30px;
+
+/* main   */
+
+main {
+    height: 100%;
+    width: 100%;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
+h1 {
+  font-size: 4rem;
+}
+p{
+  text-align: center;
+  font-size: 1.5rem;
+}
+.right-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    height: 500px;
+    width: 700px;
+    justify-content: space-around;
+    font-size: 2rem;
+}
+
+.right-container .myfooter {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+#right-start {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 25px;
+  transform: scale(2);
+}
+#left-start {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 25px;
+  transform: scale(2);
+}
+
+
+.left-container {
+  position: relative;
+}
+
+.img1 {
+  display: block;
+  height: 500px;
+  width: 400px;
+}
+
+.img2 {
+  position: absolute;
+  bottom: -50px;   
+  right: -50px;   
+  height: 300px;   
+  width: auto;
+  z-index: -1;
 }
